// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  Question Component should match snapshot with answer 1`] = `
<li
  className="CommentBox"
>
  <h4
    className="CommentBox__title mt--0 mb--0"
    data-qa-sel="comment-box-title"
  >
    Question on 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
  </h4>
  <div
    className="font-weight-bold markdown mt--d mb--d"
  >
    Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
  </div>
  <section
    role="form"
  >
    <form
      className="mb--0"
      onSubmit={[Function]}
    >
      <span
        className="ml--0 mb--0 CommentBox__savedIndicator"
      >
        Saved
      </span>
      <button
        className="btn mr--0 mb--0 right"
        data-qa-sel="delete-comment-button"
        onClick={[Function]}
      >
        Delete
      </button>
    </form>
  </section>
</li>
`;

exports[`[ClientApp]  Question Component should match snapshot without answer 1`] = `
<li
  className="CommentBox"
>
  <h4
    className="CommentBox__title mt--0 mb--0"
    data-qa-sel="comment-box-title"
  >
    Question on 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
  </h4>
  <div
    className="font-weight-bold markdown mt--d mb--d"
  >
    Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
  </div>
</li>
`;
